--- a/public/css/index.css
+++ b/public/css/index.css
@@ -27,11 +27,25 @@ body {
     color: #163158;
     text-align: center;
     font-size: 24px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+}
+.inputGroup .protocol {
+    width: 25%;
+    border: 1px solid #B9B9B9;
+    box-sizing: border-box;
+    padding: 12.5px;
+    display: inline-block;
+    vertical-align: top;
+    outline: none;
+    border-radius: 4px 0 0 4px;
+    margin-right: -4px;
+    background-color: #EAEAEA;
+    -webkit-appearance: none;
+    appearance: none;
+    cursor: pointer;
 }
 .inputGroup .input {
-    width: 75%;
-    margin-right: -4px;
+    width: 50%;
 }
 .input {
     border: 1px solid #B9B9B9;
@@ -40,7 +54,7 @@ body {
     display: inline-block;
     vertical-align: top;
     outline: none;
-    border-radius: 4px 0 0 4px;
+    margin-right: -4px;
 }
 .btn {
     background: #266FA0;
@@ -59,7 +73,7 @@ body {
     text-align: center;
     padding: 14px;
     position: fixed;
-    bottom: 0;
+    bottom: 10px;
     left: 0;
     width: 100%;
     margin: 0;
