--- a/public/css/index.css
+++ b/public/css/index.css
@@ -43,6 +43,7 @@ body {
     -webkit-appearance: none;
     appearance: none;
     cursor: pointer;
+    color: #928A8A
 }
 .inputGroup .input {
     width: 55%;
