--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,6 +23,6 @@
 		<div id="loader" class="loader">
 			<img src="/img/loader.gif"/>
 		</div>
-		<script src="/js/index.js"></script>
+		<script src="/js/{{javascript}}.js"></script>
 	</body>
 </html>
